# LinodeMCP

./: .betterleaks.toml  .dockerignore  .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .trivyignore.yaml  Makefile  README.md  buf.gen.yaml  buf.yaml  coverage.json  llms.txt  pyrightconfig.json  renovate.json  renovate.json5
.github/: CODEOWNERS
.github/scripts/: generate-release-notes.sh
.github/workflows/: agent-review.yml  baseline-guard.yml  ci.yml  qwen-review.yml  release-artifacts.yml  release.yml  renovate.yml  sync-drift.yml
ci/: Dockerfile
docs/: README.md  adding-a-language.md  audit-log.md  audit-operations.md  audit-reports.md  behavior-baseline.txt  cli.md  deprecated-routes.md  dry-run.md  enum-sync-baseline.txt  git-hooks.md  input-proto-baseline.txt  meta-proto-baseline.txt  observability.md  parity.md  profile-recipes.md  profiles.md  read-proto-baseline.txt  release-process.md  state-drift.md  tool-parity-baseline.txt  tools-capabilities.txt  tools-manifest.txt  two-stage-writes.md  verifying-releases.md  write-proto-baseline.txt
docs/contracts/: api-defaults-baseline.txt  api-pagination-baseline.txt  api-response-shapes-baseline.txt  behavior-baseline.txt  behavior-dryrun-baseline.txt  behavior-exempt.txt  coverage-floors.txt  env-vars.txt  input-proto-baseline.txt  languages.txt  message-parity-baseline.txt  pagination-baseline.txt  read-proto-baseline.txt  response-shape-baseline.txt  scope-sync-baseline.txt  tool-parity-baseline.txt  tool-routes.txt  tools-manifest.txt  write-proto-baseline.txt  write-proto-fixture-baseline.txt
docs/host-integrations/: README.md
go/: .dockerignore  .gitignore  .golangci.yml  Dockerfile  Makefile  go.mod  go.sum  hand-list-dump
go/scripts/: check-internal-exports.sh
python/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml  ruff.toml
python/src/linodemcp/: __init__.py  main.py  parity_dump.py  version.py
python/src/linodemcp/audit/: __init__.py  event.py  export.py  health.py  jsonl.py  path.py  reader.py  redact.py  retention.py  sink.py  sqlite.py  summary.py
python/src/linodemcp/cli/: __init__.py  _shared.py  audit.py  call.py  profile.py  runtime.py  tools.py
python/src/linodemcp/config/: __init__.py  watcher.py
python/src/linodemcp/linode/: __init__.py  metrics.py
python/src/linodemcp/metrics/: __init__.py
python/src/linodemcp/middleware/: __init__.py
python/src/linodemcp/observability/: __init__.py
python/src/linodemcp/profiles/: __init__.py  builtin.py  capability.py  errors.py  loader.py  profile.py  scope.py  scopecheck.py  validator.py
python/src/linodemcp/profiles/builder/: __init__.py  diff.py  errors.py  match.py
python/src/linodemcp/server/: __init__.py
python/src/linodemcp/tools/: __init__.py  _write_proto_classifier.py  hello.py  helpers.py  linode_account.py  linode_audit_export.py  linode_audit_health.py  linode_audit_recent.py  linode_audit_report.py  linode_audit_summary.py  linode_betas.py  linode_databases.py  linode_domain_records.py  linode_domains.py  linode_domains_write.py  linode_firewalls.py  linode_firewalls_write.py  linode_images.py  linode_instance_actions.py  linode_instance_backups.py  linode_instance_disks.py  linode_instance_get.py  linode_instance_ips.py  linode_instance_write.py  linode_instances.py  linode_kernels.py  linode_lke.py  linode_lke_write.py  linode_longview.py  linode_monitor_write.py  linode_network_transfer.py  linode_networking.py  linode_nodebalancers.py  linode_nodebalancers_write.py  linode_object_storage.py  linode_object_storage_write.py  linode_placement_groups.py  linode_placement_groups_write.py  linode_profile.py  linode_profile_builder.py  (+19 more)
python/src/linodemcp/transport/: __init__.py
python/src/linodemcp/tui/: __init__.py  app.py  extras.py  model.py  run.py  runner.py  runtime.py
python/src/linodemcp/twostage/: __init__.py  context.py  errors.py  hash_ignore.py  ids.py  precedence.py  registry.py  store.py
python/tests/: conftest.py
python/tests/e2e/: __init__.py
python/tests/fixtures/: linode_api_changelog.html
python/tests/integration/: __init__.py
python/tests/unit/: __init__.py  test_audit_event.py  test_audit_event_schema.py  test_audit_export.py  test_audit_export_tool.py  test_audit_health.py  test_audit_health_tool.py  test_audit_jsonl.py  test_audit_middleware.py  test_audit_path.py  test_audit_reader.py  test_audit_recent_tool.py  test_audit_redact.py  test_audit_report_tool.py  test_audit_retention.py  test_audit_sink.py  test_audit_sqlite.py  test_audit_summary.py  test_audit_summary_tool.py  test_audit_tool_branches.py  test_behavior_conformance.py  test_cli_audit.py  test_cli_call.py  test_cli_clone_delete.py  test_cli_mutators.py  test_cli_profile.py  test_cli_profile_untested.py  test_cli_runtime.py  test_cli_shared.py  test_cli_tools.py  test_config.py  test_config_audit.py  test_config_parity_fixture.py  test_config_reports.py  test_config_validation_untested.py  test_config_watcher.py  test_databases_types_route.py  test_domain_import_route.py  test_domain_records_branches.py  test_domains_write_branches.py  (+93 more)
scripts/: _baselines.py  _coverage.py  _msg_extract_go.py  _msg_extract_py.py  _surface.py  ci-container-entry.sh  ci-setup.sh  git-hooks.sh  parity_todo.py  ruff.toml  strip_enum_sentinel.py  test-git-hooks.sh  verify_baseline_direction.py  verify_behavior.py  verify_cli_surface.py  verify_coverage_floor.py  verify_diff_coverage.py  verify_docs_links.py  verify_docs_tool_count.py  verify_dryrun.py  verify_env_parity.py  verify_input_proto.py  verify_messages.py  verify_meta_proto.py  verify_metrics_surface.py  verify_pagination.py  verify_read_proto.py  verify_response_shapes.py  verify_sync_defaults.py  verify_sync_enums.py  verify_sync_pagination.py  verify_sync_response_shapes.py  verify_sync_scopes.py  verify_tool_float.py  verify_tool_parity.py  verify_write_proto.py
shared/config/: config.example.yml
testdata/audit/: event_fields.json
testdata/behavior/: linode_account_agreement_acknowledge.json  linode_account_beta_enroll.json  (+438 more)
(+1061 files in other folders)
