[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linodemcp"
version = "0.1.0"
description = "MCP server for Linode API access"
readme = "../README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "LinodeMCP Contributors"},
]
keywords = ["mcp", "linode", "api", "server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
linodemcp = "linodemcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/linodemcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=linodemcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=57",
]

[tool.coverage.run]
source = ["src/linodemcp"]
omit = ["*/tests/*", "*/test_*", "*/main.py", "*/server/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins (shadowing builtins)
    "C4",   # flake8-comprehensions
    "C90",  # mccabe complexity
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "T20",  # flake8-print (no print statements)
    "EM",   # flake8-errmsg
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self (private member access)
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",   # pylint
    "PERF", # perflint (performance anti-patterns)
    "FURB", # refurb (modern Python idioms)
    "LOG",  # flake8-logging
    "TRY",  # tryceratops
    "RUF",  # ruff-specific rules
    "S",    # bandit security checks
]

ignore = [
    "TRY003",  # Avoid specifying long messages outside exception class
    "TRY300",  # Consider moving statement to else block (stylistic)
    "TRY401",  # Redundant exception object in logging.exception
    "PLR0913", # Too many arguments to function call
    "EM101",   # Exception message string literals
    "EM102",   # Exception message f-strings
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004",  # Magic value used in comparison
    "S101",     # Use of assert
    "S105",     # Hardcoded password string (expected in tests)
    "S106",     # Hardcoded password argument (expected in tests)
    "ARG001",   # Unused function argument
    "PLC0415",  # Import should be at top of module (acceptable in tests)
    "T20",      # Print statements (acceptable in tests)
    "SLF001",   # Private member access (acceptable in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["linodemcp"]
