[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linodemcp"
version = "0.1.0"
description = "MCP server for Linode API access"
readme = "../README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "LinodeMCP Contributors" }]
keywords = ["mcp", "linode", "api", "server"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.28.1,<2.0",
    "httpx>=0.28.1,<1.0",
    "pyyaml>=6.0.3,<7.0",
    "structlog>=26.1,<26.2",
    "textual>=8.2.8,<9.0",
    # Runtime dep of the generated genpb modules and the canonical serializer.
    # Floor: the buf python/pyi plugins are pinned to v33.0, whose gencode is
    # 6.33.0 and must not be newer than the runtime. Ceiling: the
    # opentelemetry-proto exporter chain requires protobuf<7.0; bump the buf
    # plugin tags and this range together when that ceiling lifts.
    "protobuf>=6.33.0,<7.0",
    # Security floors for transitive deps pulled in by mcp. mcp's own
    # constraints are open (starlette>=0.27, python-multipart>=0.0.9), so
    # without these a resolve can land on versions trivy flags HIGH.
    # Remove once mcp's own floors clear these advisories.
    "cryptography>=49.0.0",
    "python-multipart>=0.0.32",
    "starlette>=1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20,<0.16",
    "mypy>=2.1.0",
    "types-PyYAML>=6.0.12",
    "build>=1.5.0",
]

observability = [
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-exporter-otlp>=1.43.0",
    "opentelemetry-exporter-prometheus>=0.64b0",
    "opentelemetry-instrumentation-system-metrics>=0.64b0",
    "opentelemetry-instrumentation-mcp>=0.62.1",
    "opentelemetry-instrumentation-httpx>=0.64b0",
    "prometheus-client>=0.25.0",
]

[project.scripts]
linodemcp = "linodemcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/linodemcp"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# opentelemetry ships PEP 420 namespace packages (opentelemetry.exporter is
# split across the otlp and prometheus distributions). Without this, pytest's
# default import handling resolves the namespace from only the first
# contributor it sees during full-suite collection, so importing
# opentelemetry.exporter.prometheus fails with "exporter is not a package".
consider_namespace_packages = true
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=linodemcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    # coverage.json feeds the diff-coverage gate (scripts/verify_diff_coverage.py);
    # the fail-under value is mirrored in docs/contracts/coverage-floors.txt and
    # the coverage-floor gate fails when the two drift apart.
    "--cov-report=json",
    "--cov-fail-under=85",
]

[tool.coverage.run]
source = ["src/linodemcp"]
omit = ["*/tests/*", "*/test_*", "*/main.py", "*/server/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true

# prometheus_client (like the opentelemetry packages above) lives in the
# optional "observability" extra, so any venv built without that extra has no
# module for mypy to find. Scope the ignore to it the same way opentelemetry.*
# is scoped, rather than reaching for a blanket --ignore-missing-imports that
# would hide a genuinely missing stub elsewhere.
[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

# The protobuf runtime (google.protobuf.*) ships no type stubs mypy can use, and
# the generated *_pb2 modules import it. Scope the suppression to that package
# instead of the blunt global --ignore-missing-imports, so a genuinely missing
# stub elsewhere still fails. Install types-protobuf instead if real protobuf
# typing on the serialize path is wanted.
[[tool.mypy.overrides]]
module = "google.protobuf.*"
ignore_missing_imports = true

# Generated protobuf modules: strict typing does not apply to generated code.
# follow_imports/ignore_missing_imports let source files import the generated
# _pb2 modules (a namespace package with no __init__.py) without mypy trying to
# resolve their submodules, the same way ruff excludes the genpb tree.
[[tool.mypy.overrides]]
module = "linodemcp.genpb.*"
ignore_errors = true
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
target-version = "py313"
line-length = 88
# Generated protobuf code is excluded from linting.
extend-exclude = ["src/linodemcp/genpb"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins (shadowing builtins)
    "C4",   # flake8-comprehensions
    "C90",  # mccabe complexity
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "T20",  # flake8-print (no print statements)
    "EM",   # flake8-errmsg
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self (private member access)
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",   # pylint
    "PERF", # perflint (performance anti-patterns)
    "FURB", # refurb (modern Python idioms)
    "LOG",  # flake8-logging
    "TRY",  # tryceratops
    "RUF",  # ruff-specific rules
    "S",    # bandit security checks
]

ignore = [
    "TRY003",  # Avoid specifying long messages outside exception class
    "TRY300",  # Consider moving statement to else block (stylistic)
    "TRY401",  # Redundant exception object in logging.exception
    "PLR0913", # Too many arguments to function call
    "EM101",   # Exception message string literals
    "EM102",   # Exception message f-strings
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of assert
    "S105",    # Hardcoded password string (expected in tests)
    "S106",    # Hardcoded password argument (expected in tests)
    "ARG001",  # Unused function argument
    "PLC0415", # Import should be at top of module (acceptable in tests)
    "T20",     # Print statements (acceptable in tests)
    "SLF001",  # Private member access (acceptable in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["linodemcp"]
